# sia-framework

./: .gitignore  ANNEX_IV_EVIDENCE.md  ANNEX_IV_PIPELINE_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  EU_AI_ACT_PLAN.md  README.md  TRACEABILITY.md  VALIDATION_LOOP_PLAN.md  WALKTHROUGH.md  audit_ledger.jsonl  certification_run.py  demo_hitl.py  demo_pipeline.py  demo_risk.py  external_service.py  governed_integration.py  pyproject.toml  run_simulation.py  task.md
cert_demo/: sia_logic_gate.yaml
configs/: conformity_checklist.yaml  eu_ai_act_full.yaml  iso_14971_hazards.yaml  iso_risk_registry.yaml  mitigation_registry.yaml  privacy_profiles.yaml  sia_logic_gate.yaml
configs/blueprints/: finance_v1.yaml  general_transparency.yaml  healthcare_v1.yaml  hr_recruitment_v1.yaml
dashboard/: index.html
demo_project/: sia_logic_gate.yaml
docs/: FINAL_IMPLEMENTATION_SUMMARY.md  GAP_ANALYSIS.md  RISK_MANAGEMENT_SUMMARY.md  SIA_PHASE2_REPORT.md  SIA_VALIDATION_REPORT.md  SYSTEM_DESCRIPTION.md
examples/: fastapi_governed.py
logs/: audit_ledger.jsonl
project_management/: EU_AI_ACT_PARAGRAPH_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE_10_ATOMIC_PLAN.md  WALKTHROUGH.md  task.md
reports/: ANNEX_IV_EVIDENCE.md  ISO14971_risk_management_report.md
reports/urcp/: 00_index.md  01_iso14971.md  01_overview.md  02_eu_ai_act_annex_iv.md  02_iso14971.md  03_eu_ai_act_annex_iv.md  03_iso42001.md  04_gdpr_dpia.md  04_iso42001.md  05_gdpr_dpia.md  05_uk_gdpr_assessment.md  06_hipaa_ocr_evidence.md  06_uk_gdpr_assessment.md  07_cross_reference_index.md  07_hipaa_ocr_evidence.md  08_cross_reference_index.md
src/sia/: __init__.py  main.py
src/sia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sia/adapters/: __init__.py  anthropic_adapter.py  base.py  client.py  huggingface_adapter.py  mock_adapter.py  openai_adapter.py
src/sia/cli/: generate_risk_report.py  main.py
src/sia/core/: cache.py  config.py  engine.py  risk.py  webhooks.py
src/sia/egress/: signature.py  validator.py
src/sia/ingress/: classifier.py  governance_prompts.py  orchestrator.py  sanitizer.py
src/sia/integrations/: fastapi.py
src/sia/monitoring/: __init__.py  api.py  metrics_collector.py
src/sia/regulatory/: certificates.py  conformity.py
src/sia/traceability/: Web3ComplianceVerifier.sol  daco.py  extractor.py  ledger.py  reporter.py
src/sia_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_compliance_reports.py  test_daco.py  test_phase2.py  test_poc.py  test_privacy_routing.py  test_risk_management.py  test_streaming.py
