[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sia"
version = "0.1.0"
description = "Sovereign Systemic Integrity Architecture (SIA) framework"
authors = [
    { name="Rostmon", email="rostmon@example.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
# Provider extras — only install what you need:
#   pip install sia-framework[openai]
#   pip install sia-framework[anthropic]
#   pip install sia-framework[huggingface]
#   pip install sia-framework[all]
openai      = ["openai>=1.0"]
anthropic   = ["anthropic>=0.20"]
huggingface = ["huggingface-hub>=0.20"]
all         = ["openai>=1.0", "anthropic>=0.20", "huggingface-hub>=0.20"]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]
