[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-framework"
version = "0.2.0"
authors = [
  { name="Sovereign AI Team", email="compliance@sia.framework" },
]
description = "SIA: Decentralized AI Compliance Officer (DACO) for EU AI Act, GDPR & HIPAA"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml",
    "pydantic",
    "fastapi",
    "uvicorn",
    "httpx",
    "typer",
    "rich",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest", "pytest-asyncio", "black", "isort"]

[project.scripts]
sia = "sia.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sia*"]
